# CISC468-project

./: .gitignore  README.md
Python-P2P/: generate_proto.sh  requirements.txt
Python-P2P/src/: crypto_utils.py  discovery.py  errors.py  file_manager.py  framing.py  handshake.py  key_rotation.py  main.py  nonce.py  protocol.py  session.py  storage.py  transport.py  trust.py
Python-P2P/tests/: test_crypto.py  test_discovery.py  test_file_manager.py  test_framing.py  test_handshake.py  test_integration.py  test_interop.py  test_key_rotation.py  test_nonce.py  test_protocol.py  test_session.py  test_storage.py  test_trust.py
rust-p2p/: Cargo.toml  build.rs
rust-p2p/proto/: p2pfileshare.proto
rust-p2p/roman_p2p_vault/: ed25519_identity.key  trusted_peers.json
rust-p2p/src/: app.rs  crypto.rs  error.rs  file.rs  main.rs  storage.rs  tests.rs  trust.rs
rust-p2p/src/app/: config.rs  controller.rs  state.rs
rust-p2p/src/crypto/: cipher.rs  encryption.rs  hash.rs  hashing.rs  identity.rs  kdf.rs  key_exchange.rs  keys.rs  mod.rs  session.rs  types.rs
rust-p2p/src/network/: discovery.rs  mod.rs  tcp.rs
rust-p2p/src/protocol/: handshake.rs  messages.rs  mod.rs  session.rs  verification.rs
rust-p2p/src/storage/: mod.rs
rust-p2p/src/tests/: crypto_tests.rs
