[package]
name = "rust-p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core"] } # Identity keys
x25519-dalek = { version = "2.0", features = ["static_secrets"] } # Ephemeral keys
aes-gcm = "0.10" # Symmetric encryption
hkdf = "0.12"    # Session key derivation
sha2 = "0.10"    # Hashing (used by hkdf and for file hashes)
argon2 = "0.5"   # Password-based local key derivation

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

hex = "0.4"

rpassword = "7.3"

# Needed for secure random number generation (used by the dalek crates)
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }

# protocol stuff
prost = "0.13"
bytes = "1.7"

# mDNS
mdns-sd = "0.4"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tempfile = "3.10"
